--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-Flask
-pandas
-scikit-learn
 numpy
-pyttsx3
 gunicorn
-pyttsx3 espeak
+Flask==2.0.2
+pandas==1.3.3
+scikit-learn==0.24.2
+pyttsx3==2.90
+espeak==0.5
+
